maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: Int does not take parameters
    test() match{
        ^JediEscaper:59: error: not found: value x
  if (aMurNord(x,y)==false && getIndication(x,y-1)<getIndication(x,y)){return 0}
               ^JediEscaper:59: error: not found: value y
  if (aMurNord(x,y)==false && getIndication(x,y-1)<getIndication(x,y)){return 0}
                 ^JediEscaper:59: error: not found: value x
  if (aMurNord(x,y)==false && getIndication(x,y-1)<getIndication(x,y)){return 0}
                                            ^JediEscaper:59: error: not found: value y
  if (aMurNord(x,y)==false && getIndication(x,y-1)<getIndication(x,y)){return 0}
                                              ^JediEscaper:59: error: not found: value x
  if (aMurNord(x,y)==false && getIndication(x,y-1)<getIndication(x,y)){return 0}
                                                                 ^JediEscaper:59: error: not found: value y
  if (aMurNord(x,y)==false && getIndication(x,y-1)<getIndication(x,y)){return 0}
                                                                   ^JediEscaper:60: error: not found: value x
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y)){return 1}
              ^JediEscaper:60: error: not found: value y
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y)){return 1}
                ^JediEscaper:60: error: not found: value x
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y)){return 1}
                                           ^JediEscaper:60: error: not found: value y
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y)){return 1}
                                             ^JediEscaper:60: error: not found: value x
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y)){return 1}
                                                                ^JediEscaper:60: error: not found: value y
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y)){return 1}
                                                                  ^JediEscaper:61: error: not found: value x
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y)){return 2}
              ^JediEscaper:61: error: not found: value y
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y)){return 2}
                ^JediEscaper:61: error: not found: value x
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y)){return 2}
                                           ^JediEscaper:61: error: not found: value y
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y)){return 2}
                                               ^JediEscaper:61: error: not found: value x
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y)){return 2}
                                                                ^JediEscaper:61: error: not found: value y
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y)){return 2}
                                                                  ^JediEscaper:62: error: not found: value x
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                ^JediEscaper:62: error: not found: value y
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                  ^JediEscaper:62: error: not found: value x
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                                             ^JediEscaper:62: error: not found: value y
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                                                 ^JediEscaper:62: error: not found: value x
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                                                                  ^JediEscaper:62: error: not found: value y
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                                                                    ^JediEscaper:63: error: type mismatch;
 found   : Unit
 required: Int
  if (estSurBiscuit==true){return 4}
  ^